# NLite-for-NextPVR

./: .gitignore  README.md
nlite/: CMakeLists.txt  Makefile  NLite.sln  readme.txt
nlite/src/: CurlHelper.cpp  CurlHelper.h  MCEHelper.cpp  MCEHelper.h  MD5.cpp  MD5.h  NPVRSession.cpp  NPVRSession.h  Player.cpp  Player.h  SDLVLC.vcxproj  SDLVLC.vcxproj.filters  UserInterface.cpp  UserInterface.h  Utility.cpp  Utility.h  stdafx.cpp  stdafx.h
